// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JourneyOps exportJourney() 1: Export journey 'FrodoTestJourney3' w/o dependencies 1`] = `
{
  "circlesOfTrust": {},
  "emailTemplates": {},
  "innerNodes": {
    "60ff8a50-6be3-4eb6-a031-387897e7ca9a": {
      "_id": "60ff8a50-6be3-4eb6-a031-387897e7ca9a",
      "_outcomes": [
        {
          "displayName": "Outcome",
          "id": "outcome",
        },
      ],
      "_rev": "969732594",
      "_type": {
        "_id": "ValidatedPasswordNode",
        "collection": true,
        "name": "Platform Password",
      },
      "passwordAttribute": "password",
      "validateInput": false,
    },
    "78164e4b-ac34-46fb-b271-2ae0b1c4dda3": {
      "_id": "78164e4b-ac34-46fb-b271-2ae0b1c4dda3",
      "_outcomes": [
        {
          "displayName": "Outcome",
          "id": "outcome",
        },
      ],
      "_rev": "1320178888",
      "_type": {
        "_id": "ValidatedPasswordNode",
        "collection": true,
        "name": "Platform Password",
      },
      "passwordAttribute": "password",
      "validateInput": false,
    },
    "99f2d026-8d93-492d-b97f-c7331dc31c6d": {
      "_id": "99f2d026-8d93-492d-b97f-c7331dc31c6d",
      "_outcomes": [
        {
          "displayName": "Outcome",
          "id": "outcome",
        },
      ],
      "_rev": "-2073692024",
      "_type": {
        "_id": "ValidatedUsernameNode",
        "collection": true,
        "name": "Platform Username",
      },
      "usernameAttribute": "userName",
      "validateInput": false,
    },
    "e165f3c7-babc-43be-8b3c-e99f1e735908": {
      "_id": "e165f3c7-babc-43be-8b3c-e99f1e735908",
      "_outcomes": [
        {
          "displayName": "Social Authentication",
          "id": "socialAuthentication",
        },
        {
          "displayName": "Local Authentication",
          "id": "localAuthentication",
        },
      ],
      "_rev": "280483221",
      "_type": {
        "_id": "SelectIdPNode",
        "collection": true,
        "name": "Select Identity Provider",
      },
      "filteredProviders": [
        "google",
        "facebook",
        "azure",
      ],
      "identityAttribute": "mail",
      "includeLocalAuthentication": true,
      "offerOnlyExisting": false,
      "passwordAttribute": "password",
    },
    "eb302165-5014-4538-8baf-8cdce05a50e6": {
      "_id": "eb302165-5014-4538-8baf-8cdce05a50e6",
      "_outcomes": [
        {
          "displayName": "Social Authentication",
          "id": "socialAuthentication",
        },
        {
          "displayName": "Local Authentication",
          "id": "localAuthentication",
        },
      ],
      "_rev": "1791446947",
      "_type": {
        "_id": "SelectIdPNode",
        "collection": true,
        "name": "Select Identity Provider",
      },
      "filteredProviders": [
        "adfs",
        "github",
      ],
      "identityAttribute": "mail",
      "includeLocalAuthentication": true,
      "offerOnlyExisting": false,
      "passwordAttribute": "password",
    },
  },
  "meta": Any<Object>,
  "nodes": {
    "46643303-aeb2-4873-9df1-59db4958cc34": {
      "_id": "46643303-aeb2-4873-9df1-59db4958cc34",
      "_outcomes": [
        {
          "displayName": "known",
          "id": "known",
        },
        {
          "displayName": "unknown",
          "id": "unknown",
        },
      ],
      "_rev": "-99193033",
      "_type": {
        "_id": "ScriptedDecisionNode",
        "collection": true,
        "name": "Scripted Decision",
      },
      "inputs": [
        "*",
      ],
      "outcomes": [
        "known",
        "unknown",
      ],
      "outputs": [
        "*",
      ],
      "script": "739bdc48-fd24-4c52-b353-88706d75558a",
    },
    "4b5d893f-0ade-4385-88d6-a281754fe498": {
      "_id": "4b5d893f-0ade-4385-88d6-a281754fe498",
      "_outcomes": [
        {
          "displayName": "Account exists",
          "id": "ACCOUNT_EXISTS",
        },
        {
          "displayName": "No account exists",
          "id": "NO_ACCOUNT",
        },
      ],
      "_rev": "-1901002889",
      "_type": {
        "_id": "SocialProviderHandlerNode",
        "collection": true,
        "name": "Social Provider Handler Node",
      },
      "clientType": "BROWSER",
      "script": "58c824ae-84ed-4724-82cd-db128fc3f6c",
      "usernameAttribute": "userName",
    },
    "9381fc70-1a31-40de-85de-23faf97e7b28": {
      "_id": "9381fc70-1a31-40de-85de-23faf97e7b28",
      "_outcomes": [
        {
          "displayName": "Social Authentication",
          "id": "socialAuthentication",
        },
        {
          "displayName": "Local Authentication",
          "id": "localAuthentication",
        },
      ],
      "_rev": "1072614526",
      "_type": {
        "_id": "PageNode",
        "collection": true,
        "name": "Page Node",
      },
      "nodes": [
        {
          "_id": "78164e4b-ac34-46fb-b271-2ae0b1c4dda3",
          "displayName": "Password",
          "nodeType": "ValidatedPasswordNode",
        },
        {
          "_id": "eb302165-5014-4538-8baf-8cdce05a50e6",
          "displayName": "Select IDP",
          "nodeType": "SelectIdPNode",
        },
      ],
      "pageDescription": {},
      "pageHeader": {},
    },
    "a681751d-ab8c-4cb8-8be9-92b4cc688b69": {
      "_id": "a681751d-ab8c-4cb8-8be9-92b4cc688b69",
      "_outcomes": [
        {
          "displayName": "True",
          "id": "TRUE",
        },
        {
          "displayName": "False",
          "id": "FALSE",
        },
        {
          "displayName": "Locked",
          "id": "LOCKED",
        },
        {
          "displayName": "Cancelled",
          "id": "CANCELLED",
        },
        {
          "displayName": "Expired",
          "id": "EXPIRED",
        },
      ],
      "_rev": "-42205309",
      "_type": {
        "_id": "IdentityStoreDecisionNode",
        "collection": true,
        "name": "Identity Store Decision",
      },
      "minimumPasswordLength": 8,
      "mixedCaseForPasswordChangeMessages": false,
      "useUniversalIdForUsername": true,
    },
    "ab9f607b-0f87-4e46-972d-fa726cd1c8f0": {
      "_id": "ab9f607b-0f87-4e46-972d-fa726cd1c8f0",
      "_outcomes": [
        {
          "displayName": "Social Authentication",
          "id": "socialAuthentication",
        },
        {
          "displayName": "Local Authentication",
          "id": "localAuthentication",
        },
      ],
      "_rev": "-1965514998",
      "_type": {
        "_id": "PageNode",
        "collection": true,
        "name": "Page Node",
      },
      "nodes": [
        {
          "_id": "99f2d026-8d93-492d-b97f-c7331dc31c6d",
          "displayName": "Username",
          "nodeType": "ValidatedUsernameNode",
        },
        {
          "_id": "60ff8a50-6be3-4eb6-a031-387897e7ca9a",
          "displayName": "Password",
          "nodeType": "ValidatedPasswordNode",
        },
        {
          "_id": "e165f3c7-babc-43be-8b3c-e99f1e735908",
          "displayName": "Select IDP",
          "nodeType": "SelectIdPNode",
        },
      ],
      "pageDescription": {},
      "pageHeader": {},
    },
    "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59": {
      "_id": "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59",
      "_outcomes": [
        {
          "displayName": "Email Sent",
          "id": "EMAIL_SENT",
        },
        {
          "displayName": "Email Not Sent",
          "id": "EMAIL_NOT_SENT",
        },
      ],
      "_rev": "-846450844",
      "_type": {
        "_id": "EmailTemplateNode",
        "collection": true,
        "name": "Email Template Node",
      },
      "emailAttribute": "mail",
      "emailTemplateName": "welcome",
      "identityAttribute": "userName",
    },
    "dd0d8532-e7a2-40af-b05f-2913432fc97e": {
      "_id": "dd0d8532-e7a2-40af-b05f-2913432fc97e",
      "_outcomes": [
        {
          "displayName": "Account exists",
          "id": "ACCOUNT_EXISTS",
        },
        {
          "displayName": "No account exists",
          "id": "NO_ACCOUNT",
        },
      ],
      "_rev": "1765887235",
      "_type": {
        "_id": "product-Saml2Node",
        "collection": true,
        "name": "SAML2 Authentication",
      },
      "allowCreate": true,
      "authComparison": "MINIMUM",
      "authnContextClassRef": [],
      "authnContextDeclRef": [],
      "binding": "HTTP_ARTIFACT",
      "forceAuthn": false,
      "idpEntityId": "urn:federation:MicrosoftOnline",
      "isPassive": false,
      "metaAlias": "/alpha/iSPAzure",
      "nameIdFormat": "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
      "requestBinding": "HTTP_REDIRECT",
    },
    "e60801b1-9b6f-4017-83d4-1695ca982022": {
      "_id": "e60801b1-9b6f-4017-83d4-1695ca982022",
      "_outcomes": [
        {
          "displayName": "True",
          "id": "true",
        },
        {
          "displayName": "False",
          "id": "false",
        },
      ],
      "_rev": "1857773376",
      "_type": {
        "_id": "InnerTreeEvaluatorNode",
        "collection": true,
        "name": "Inner Tree Evaluator",
      },
      "tree": "FrodoTestJourney2",
    },
  },
  "saml2Entities": {},
  "scripts": {},
  "socialIdentityProviders": {},
  "themes": [],
  "tree": {
    "_id": "FrodoTestJourney3",
    "_rev": "789342746",
    "description": "Frodo test journey utilizing a variety of nodes and dependencies to test support for complex journeys.",
    "enabled": true,
    "entryNodeId": "46643303-aeb2-4873-9df1-59db4958cc34",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "46643303-aeb2-4873-9df1-59db4958cc34": {
        "connections": {
          "known": "9381fc70-1a31-40de-85de-23faf97e7b28",
          "unknown": "ab9f607b-0f87-4e46-972d-fa726cd1c8f0",
        },
        "displayName": "Check Username",
        "nodeType": "ScriptedDecisionNode",
        "x": 210,
        "y": 305.5,
      },
      "4b5d893f-0ade-4385-88d6-a281754fe498": {
        "connections": {
          "ACCOUNT_EXISTS": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
          "NO_ACCOUNT": "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59",
        },
        "displayName": "Social Login",
        "nodeType": "SocialProviderHandlerNode",
        "x": 685,
        "y": 371.8333333333333,
      },
      "9381fc70-1a31-40de-85de-23faf97e7b28": {
        "connections": {
          "localAuthentication": "a681751d-ab8c-4cb8-8be9-92b4cc688b69",
          "socialAuthentication": "4b5d893f-0ade-4385-88d6-a281754fe498",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 440,
        "y": 424,
      },
      "a681751d-ab8c-4cb8-8be9-92b4cc688b69": {
        "connections": {
          "CANCELLED": "e60801b1-9b6f-4017-83d4-1695ca982022",
          "EXPIRED": "e60801b1-9b6f-4017-83d4-1695ca982022",
          "FALSE": "e301438c-0bd0-429c-ab0c-66126501069a",
          "LOCKED": "e301438c-0bd0-429c-ab0c-66126501069a",
          "TRUE": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Validate Creds",
        "nodeType": "IdentityStoreDecisionNode",
        "x": 685,
        "y": 143.66666666666666,
      },
      "ab9f607b-0f87-4e46-972d-fa726cd1c8f0": {
        "connections": {
          "localAuthentication": "a681751d-ab8c-4cb8-8be9-92b4cc688b69",
          "socialAuthentication": "4b5d893f-0ade-4385-88d6-a281754fe498",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 440,
        "y": 80,
      },
      "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59": {
        "connections": {
          "EMAIL_NOT_SENT": "e301438c-0bd0-429c-ab0c-66126501069a",
          "EMAIL_SENT": "dd0d8532-e7a2-40af-b05f-2913432fc97e",
        },
        "displayName": "Email Template Node",
        "nodeType": "EmailTemplateNode",
        "x": 915,
        "y": 309.3333333333333,
      },
      "dd0d8532-e7a2-40af-b05f-2913432fc97e": {
        "connections": {
          "ACCOUNT_EXISTS": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
          "NO_ACCOUNT": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "SAML2 Authentication",
        "nodeType": "product-Saml2Node",
        "x": 1163,
        "y": 305.5,
      },
      "e60801b1-9b6f-4017-83d4-1695ca982022": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Login",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 915,
        "y": 168.66666666666669,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1417,
        "y": 192,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1417,
        "y": 286,
      },
      "startNode": {
        "x": 70,
        "y": 323,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
}
`;

exports[`JourneyOps exportJourney() 2: Export journey 'FrodoTestJourney3' w/ dependencies 1`] = `
{
  "circlesOfTrust": {
    "AzureCOT": {
      "_id": "AzureCOT",
      "_rev": "-954827061",
      "_type": {
        "_id": "circlesoftrust",
        "collection": true,
        "name": "Circle of Trust",
      },
      "status": "active",
      "trustedProviders": [
        "iSPAzure|saml2",
        "urn:federation:MicrosoftOnline|saml2",
        "https://sts.windows.net/711ffa9c-5972-4713-ace3-688c9732614a/|saml2",
        "SPAzure|saml2",
        "https://idc.scheuber.io/am/saml2/IDPAzure|saml2",
      ],
    },
  },
  "emailTemplates": {
    "welcome": {
      "_id": "emailTemplate/welcome",
      "defaultLocale": "en",
      "displayName": "Welcome",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Welcome. Your username is '{{object.userName}}'.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #5e6d82; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Welcome. Your username is '{{object.userName}}'.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body{
 background-color:#324054;
 color:#5e6d82;
 padding:60px;
 text-align:center
}
a{
 text-decoration:none;
 color:#109cf1
}
.content{
 background-color:#fff;
 border-radius:4px;
 margin:0 auto;
 padding:48px;
 width:235px
}
",
      "subject": {
        "en": "Your account has been created",
      },
    },
  },
  "innerNodes": {
    "60ff8a50-6be3-4eb6-a031-387897e7ca9a": {
      "_id": "60ff8a50-6be3-4eb6-a031-387897e7ca9a",
      "_outcomes": [
        {
          "displayName": "Outcome",
          "id": "outcome",
        },
      ],
      "_rev": "969732594",
      "_type": {
        "_id": "ValidatedPasswordNode",
        "collection": true,
        "name": "Platform Password",
      },
      "passwordAttribute": "password",
      "validateInput": false,
    },
    "78164e4b-ac34-46fb-b271-2ae0b1c4dda3": {
      "_id": "78164e4b-ac34-46fb-b271-2ae0b1c4dda3",
      "_outcomes": [
        {
          "displayName": "Outcome",
          "id": "outcome",
        },
      ],
      "_rev": "1320178888",
      "_type": {
        "_id": "ValidatedPasswordNode",
        "collection": true,
        "name": "Platform Password",
      },
      "passwordAttribute": "password",
      "validateInput": false,
    },
    "99f2d026-8d93-492d-b97f-c7331dc31c6d": {
      "_id": "99f2d026-8d93-492d-b97f-c7331dc31c6d",
      "_outcomes": [
        {
          "displayName": "Outcome",
          "id": "outcome",
        },
      ],
      "_rev": "-2073692024",
      "_type": {
        "_id": "ValidatedUsernameNode",
        "collection": true,
        "name": "Platform Username",
      },
      "usernameAttribute": "userName",
      "validateInput": false,
    },
    "e165f3c7-babc-43be-8b3c-e99f1e735908": {
      "_id": "e165f3c7-babc-43be-8b3c-e99f1e735908",
      "_outcomes": [
        {
          "displayName": "Social Authentication",
          "id": "socialAuthentication",
        },
        {
          "displayName": "Local Authentication",
          "id": "localAuthentication",
        },
      ],
      "_rev": "280483221",
      "_type": {
        "_id": "SelectIdPNode",
        "collection": true,
        "name": "Select Identity Provider",
      },
      "filteredProviders": [
        "google",
        "facebook",
        "azure",
      ],
      "identityAttribute": "mail",
      "includeLocalAuthentication": true,
      "offerOnlyExisting": false,
      "passwordAttribute": "password",
    },
    "eb302165-5014-4538-8baf-8cdce05a50e6": {
      "_id": "eb302165-5014-4538-8baf-8cdce05a50e6",
      "_outcomes": [
        {
          "displayName": "Social Authentication",
          "id": "socialAuthentication",
        },
        {
          "displayName": "Local Authentication",
          "id": "localAuthentication",
        },
      ],
      "_rev": "1791446947",
      "_type": {
        "_id": "SelectIdPNode",
        "collection": true,
        "name": "Select Identity Provider",
      },
      "filteredProviders": [
        "adfs",
        "github",
      ],
      "identityAttribute": "mail",
      "includeLocalAuthentication": true,
      "offerOnlyExisting": false,
      "passwordAttribute": "password",
    },
  },
  "meta": Any<Object>,
  "nodes": {
    "46643303-aeb2-4873-9df1-59db4958cc34": {
      "_id": "46643303-aeb2-4873-9df1-59db4958cc34",
      "_outcomes": [
        {
          "displayName": "known",
          "id": "known",
        },
        {
          "displayName": "unknown",
          "id": "unknown",
        },
      ],
      "_rev": "-99193033",
      "_type": {
        "_id": "ScriptedDecisionNode",
        "collection": true,
        "name": "Scripted Decision",
      },
      "inputs": [
        "*",
      ],
      "outcomes": [
        "known",
        "unknown",
      ],
      "outputs": [
        "*",
      ],
      "script": "739bdc48-fd24-4c52-b353-88706d75558a",
    },
    "4b5d893f-0ade-4385-88d6-a281754fe498": {
      "_id": "4b5d893f-0ade-4385-88d6-a281754fe498",
      "_outcomes": [
        {
          "displayName": "Account exists",
          "id": "ACCOUNT_EXISTS",
        },
        {
          "displayName": "No account exists",
          "id": "NO_ACCOUNT",
        },
      ],
      "_rev": "-1901002889",
      "_type": {
        "_id": "SocialProviderHandlerNode",
        "collection": true,
        "name": "Social Provider Handler Node",
      },
      "clientType": "BROWSER",
      "script": "58c824ae-84ed-4724-82cd-db128fc3f6c",
      "usernameAttribute": "userName",
    },
    "9381fc70-1a31-40de-85de-23faf97e7b28": {
      "_id": "9381fc70-1a31-40de-85de-23faf97e7b28",
      "_outcomes": [
        {
          "displayName": "Social Authentication",
          "id": "socialAuthentication",
        },
        {
          "displayName": "Local Authentication",
          "id": "localAuthentication",
        },
      ],
      "_rev": "1072614526",
      "_type": {
        "_id": "PageNode",
        "collection": true,
        "name": "Page Node",
      },
      "nodes": [
        {
          "_id": "78164e4b-ac34-46fb-b271-2ae0b1c4dda3",
          "displayName": "Password",
          "nodeType": "ValidatedPasswordNode",
        },
        {
          "_id": "eb302165-5014-4538-8baf-8cdce05a50e6",
          "displayName": "Select IDP",
          "nodeType": "SelectIdPNode",
        },
      ],
      "pageDescription": {},
      "pageHeader": {},
    },
    "a681751d-ab8c-4cb8-8be9-92b4cc688b69": {
      "_id": "a681751d-ab8c-4cb8-8be9-92b4cc688b69",
      "_outcomes": [
        {
          "displayName": "True",
          "id": "TRUE",
        },
        {
          "displayName": "False",
          "id": "FALSE",
        },
        {
          "displayName": "Locked",
          "id": "LOCKED",
        },
        {
          "displayName": "Cancelled",
          "id": "CANCELLED",
        },
        {
          "displayName": "Expired",
          "id": "EXPIRED",
        },
      ],
      "_rev": "-42205309",
      "_type": {
        "_id": "IdentityStoreDecisionNode",
        "collection": true,
        "name": "Identity Store Decision",
      },
      "minimumPasswordLength": 8,
      "mixedCaseForPasswordChangeMessages": false,
      "useUniversalIdForUsername": true,
    },
    "ab9f607b-0f87-4e46-972d-fa726cd1c8f0": {
      "_id": "ab9f607b-0f87-4e46-972d-fa726cd1c8f0",
      "_outcomes": [
        {
          "displayName": "Social Authentication",
          "id": "socialAuthentication",
        },
        {
          "displayName": "Local Authentication",
          "id": "localAuthentication",
        },
      ],
      "_rev": "-1965514998",
      "_type": {
        "_id": "PageNode",
        "collection": true,
        "name": "Page Node",
      },
      "nodes": [
        {
          "_id": "99f2d026-8d93-492d-b97f-c7331dc31c6d",
          "displayName": "Username",
          "nodeType": "ValidatedUsernameNode",
        },
        {
          "_id": "60ff8a50-6be3-4eb6-a031-387897e7ca9a",
          "displayName": "Password",
          "nodeType": "ValidatedPasswordNode",
        },
        {
          "_id": "e165f3c7-babc-43be-8b3c-e99f1e735908",
          "displayName": "Select IDP",
          "nodeType": "SelectIdPNode",
        },
      ],
      "pageDescription": {},
      "pageHeader": {},
    },
    "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59": {
      "_id": "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59",
      "_outcomes": [
        {
          "displayName": "Email Sent",
          "id": "EMAIL_SENT",
        },
        {
          "displayName": "Email Not Sent",
          "id": "EMAIL_NOT_SENT",
        },
      ],
      "_rev": "-846450844",
      "_type": {
        "_id": "EmailTemplateNode",
        "collection": true,
        "name": "Email Template Node",
      },
      "emailAttribute": "mail",
      "emailTemplateName": "welcome",
      "identityAttribute": "userName",
    },
    "dd0d8532-e7a2-40af-b05f-2913432fc97e": {
      "_id": "dd0d8532-e7a2-40af-b05f-2913432fc97e",
      "_outcomes": [
        {
          "displayName": "Account exists",
          "id": "ACCOUNT_EXISTS",
        },
        {
          "displayName": "No account exists",
          "id": "NO_ACCOUNT",
        },
      ],
      "_rev": "1765887235",
      "_type": {
        "_id": "product-Saml2Node",
        "collection": true,
        "name": "SAML2 Authentication",
      },
      "allowCreate": true,
      "authComparison": "MINIMUM",
      "authnContextClassRef": [],
      "authnContextDeclRef": [],
      "binding": "HTTP_ARTIFACT",
      "forceAuthn": false,
      "idpEntityId": "urn:federation:MicrosoftOnline",
      "isPassive": false,
      "metaAlias": "/alpha/iSPAzure",
      "nameIdFormat": "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
      "requestBinding": "HTTP_REDIRECT",
    },
    "e60801b1-9b6f-4017-83d4-1695ca982022": {
      "_id": "e60801b1-9b6f-4017-83d4-1695ca982022",
      "_outcomes": [
        {
          "displayName": "True",
          "id": "true",
        },
        {
          "displayName": "False",
          "id": "false",
        },
      ],
      "_rev": "1857773376",
      "_type": {
        "_id": "InnerTreeEvaluatorNode",
        "collection": true,
        "name": "Inner Tree Evaluator",
      },
      "tree": "FrodoTestJourney2",
    },
  },
  "saml2Entities": {
    "aVNQQXp1cmU": {
      "_id": "aVNQQXp1cmU",
      "_rev": "1379466460",
      "entityId": "iSPAzure",
      "entityLocation": "hosted",
      "serviceProvider": {
        "advanced": {
          "ecpConfiguration": {
            "ecpRequestIdpListFinderImpl": "com.sun.identity.saml2.plugins.ECPIDPFinder",
          },
          "idpProxy": {},
          "relayStateUrlList": {},
          "saeConfiguration": {
            "spUrl": "https://idc.scheuber.io/am/spsaehandler/metaAlias/alpha/iSPAzure",
          },
        },
        "assertionContent": {
          "assertionTimeSkew": 300,
          "authenticationContext": {
            "authContextItems": [
              {
                "contextReference": "urn:oasis:names:tc:SAML:2.0:ac:classes:PasswordProtectedTransport",
                "defaultItem": true,
                "level": 0,
              },
            ],
            "authenticationComparisonType": "Exact",
            "authenticationContextMapper": "com.sun.identity.saml2.plugins.DefaultSPAuthnContextMapper",
            "includeRequestedAuthenticationContext": true,
          },
          "basicAuthentication": {},
          "nameIdFormat": {
            "nameIdFormatList": [
              "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
              "urn:oasis:names:tc:SAML:2.0:nameid-format:transient",
              "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress",
              "urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified",
              "urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName",
              "urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos",
              "urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName",
            ],
          },
          "signingAndEncryption": {
            "encryption": {},
            "requestResponseSigning": {},
            "secretIdAndAlgorithms": {},
          },
        },
        "assertionProcessing": {
          "accountMapping": {
            "spAccountMapper": "com.sun.identity.saml2.plugins.DefaultSPAccountMapper",
            "useNameIDAsSPUserID": true,
          },
          "adapter": {},
          "attributeMapper": {
            "attributeMap": [
              {
                "key": "http://schemas.microsoft.com/identity/claims/displayname",
                "value": "cn",
              },
              {
                "key": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/givenname",
                "value": "givenName",
              },
              {
                "key": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/surname",
                "value": "sn",
              },
              {
                "key": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress",
                "value": "mail",
              },
              {
                "key": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name",
                "value": "uid",
              },
            ],
            "attributeMapper": "com.sun.identity.saml2.plugins.DefaultSPAttributeMapper",
          },
          "autoFederation": {
            "autoFedEnabled": false,
          },
          "responseArtifactMessageEncoding": {
            "encoding": "URI",
          },
          "url": {},
        },
        "services": {
          "metaAlias": "/alpha/iSPAzure",
          "serviceAttributes": {
            "assertionConsumerService": [
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact",
                "index": 0,
                "isDefault": true,
                "location": "https://idc.scheuber.io/am/AuthConsumer/metaAlias/alpha/iSPAzure",
              },
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
                "index": 1,
                "isDefault": false,
                "location": "https://idc.scheuber.io/am/AuthConsumer/metaAlias/alpha/iSPAzure",
              },
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:PAOS",
                "index": 2,
                "isDefault": false,
                "location": "https://idc.scheuber.io/am/Consumer/ECP/metaAlias/alpha/iSPAzure",
              },
            ],
            "nameIdService": [
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
                "location": "https://idc.scheuber.io/am/SPMniRedirect/metaAlias/alpha/iSPAzure",
                "responseLocation": "https://idc.scheuber.io/am/SPMniRedirect/metaAlias/alpha/iSPAzure",
              },
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
                "location": "https://idc.scheuber.io/am/SPMniPOST/metaAlias/alpha/iSPAzure",
                "responseLocation": "https://idc.scheuber.io/am/SPMniPOST/metaAlias/alpha/iSPAzure",
              },
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
                "location": "https://idc.scheuber.io/am/SPMniSoap/metaAlias/alpha/iSPAzure",
                "responseLocation": "https://idc.scheuber.io/am/SPMniSoap/metaAlias/alpha/iSPAzure",
              },
            ],
            "singleLogoutService": [
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
                "location": "https://idc.scheuber.io/am/SPSloRedirect/metaAlias/alpha/iSPAzure",
                "responseLocation": "https://idc.scheuber.io/am/SPSloRedirect/metaAlias/alpha/iSPAzure",
              },
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
                "location": "https://idc.scheuber.io/am/SPSloPOST/metaAlias/alpha/iSPAzure",
                "responseLocation": "https://idc.scheuber.io/am/SPSloPOST/metaAlias/alpha/iSPAzure",
              },
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
                "location": "https://idc.scheuber.io/am/SPSloSoap/metaAlias/alpha/iSPAzure",
              },
            ],
          },
        },
      },
    },
    "dXJuOmZlZGVyYXRpb246TWljcm9zb2Z0T25saW5l": {
      "_id": "dXJuOmZlZGVyYXRpb246TWljcm9zb2Z0T25saW5l",
      "_rev": "317057337",
      "base64EntityXML": "PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiIHN0YW5kYWxvbmU9InllcyI_Pgo8RW50aXR5RGVzY3JpcHRvciBlbnRpdHlJRD0idXJuOmZlZGVyYXRpb246TWljcm9zb2Z0T25saW5lIiBJRD0iX2U0NmExMTkzLWU4YTctNDhlZC04MDRmLTE1MTY3MjllY2I1ZiIgeG1sbnM9InVybjpvYXNpczpuYW1lczp0YzpTQU1MOjIuMDptZXRhZGF0YSIgeG1sbnM6cXVlcnk9InVybjpvYXNpczpuYW1lczp0YzpTQU1MOm1ldGFkYXRhOmV4dDpxdWVyeSIgeG1sbnM6bWRhdHRyPSJ1cm46b2FzaXM6bmFtZXM6dGM6U0FNTDptZXRhZGF0YTphdHRyaWJ1dGUiIHhtbG5zOnNhbWw9InVybjpvYXNpczpuYW1lczp0YzpTQU1MOjIuMDphc3NlcnRpb24iIHhtbG5zOnhlbmM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDEvMDQveG1sZW5jIyIgeG1sbnM6eGVuYzExPSJodHRwOi8vd3d3LnczLm9yZy8yMDA5L3htbGVuYzExIyIgeG1sbnM6YWxnPSJ1cm46b2FzaXM6bmFtZXM6dGM6U0FNTDptZXRhZGF0YTphbGdzdXBwb3J0IiB4bWxuczp4NTA5cXJ5PSJ1cm46b2FzaXM6bmFtZXM6dGM6U0FNTDptZXRhZGF0YTpYNTA5OnF1ZXJ5IiB4bWxuczpkcz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC8wOS94bWxkc2lnIyI-CiAgICA8RXh0ZW5zaW9ucz4KICAgICAgICA8YWxnOkRpZ2VzdE1ldGhvZCBBbGdvcml0aG09Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvMDkveG1sZHNpZyNzaGExIi8-CiAgICAgICAgPGFsZzpTaWduaW5nTWV0aG9kIEFsZ29yaXRobT0iaHR0cDovL3d3dy53My5vcmcvMjAwMC8wOS94bWxkc2lnI3JzYS1zaGExIi8-CiAgICA8L0V4dGVuc2lvbnM-CiAgICA8U1BTU09EZXNjcmlwdG9yIFdhbnRBc3NlcnRpb25zU2lnbmVkPSJ0cnVlIiBwcm90b2NvbFN1cHBvcnRFbnVtZXJhdGlvbj0idXJuOm9hc2lzOm5hbWVzOnRjOlNBTUw6Mi4wOnByb3RvY29sIj4KICAgICAgICA8S2V5RGVzY3JpcHRvciB1c2U9InNpZ25pbmciPgogICAgICAgICAgICA8ZHM6S2V5SW5mbz4KICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgPGRzOlg1MDlEYXRhPgogICAgICAgICAgICAgICAgICAgIDxkczpYNTA5Q2VydGlmaWNhdGU-Ck1JSUMvVENDQWVXZ0F3SUJBZ0lRYmdESGZpM3QxSk5HVnF3RDUvN2xtakFOQmdrcWhraUc5dzBCQVFzRkFEQXBNU2N3SlFZRFZRUUQKRXg1TWFYWmxJRWxFSUZOVVV5QlRhV2R1YVc1bklGQjFZbXhwWXlCTFpYa3dIaGNOTWpBeE1qSXhNREF3TURBd1doY05NalV4TWpJeApNREF3TURBd1dqQXBNU2N3SlFZRFZRUURFeDVNYVhabElFbEVJRk5VVXlCVGFXZHVhVzVuSUZCMVlteHBZeUJMWlhrd2dnRWlNQTBHCkNTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFERlQwLzAvMnFRdXJuWWEwTGJKSEY5WVlvemhFSDZyOW1DeFZEQlliZXcKU0c0dEdncldwc2V3US85NnBjY3pHTVFjdE12VStoMmVYMzhIeC9mOUpBSURidVJRelFsc1BoUVM3RERaNldsVFhVK3Q4ZC9nMkM3ZgpwU29MczRLVmRKaWg0eHlqTFVXaitCSy9panNSakJ0NFJpdzlWYkpIL0RkV0t5b1NNYkVDRWlFK3MxUnRMUC9lWW9NbU5meHlRR3FXCmlyQ05xVk5CVGxxellRcDRkZ0YwZm9ZeTRrdG94d21RT1ZvVGNJTUZZcDFJNHBGUEk3Q3h1TUxrZkswWDdhVGJNN1lHcGh2TWZKeEoKa2pyUWR5STdHNWQxdDRETmkzemtFYkJUN0ZHQXI2cVB0M0tuOXJhbHBxSktIZHBFQkE5TjB2TndRbzVYVFlJaFViUFExNklSQWdNQgpBQUdqSVRBZk1CMEdBMVVkRGdRV0JCUnM3dFBtZmtrc1NyNjdLdEVsSGpZWmJlYUNUakFOQmdrcWhraUc5dzBCQVFzRkFBT0NBUUVBCkpxd01aU2pRSjM2eCsxc3R5NkVlTEtRTFFld1F3UGFFQzQ3WnV0KzhiWGVkNlE4ak1aMGJmYS9NTTdYcXVFY2FiYU1aTFF1S0xmdDQKNFlYd1hYUU9mUXJJMnFqUXIzZVRvSkZsRFQ5aFIwcmZwOXdRcXR0RHhkNkFhNlJXd0RUZ281b0tVUUNUS0xIaEV5OHVXelNjSzBlRwp0MmQ3VFdUYURYalJTd05xNnRNN2ZSaFpzMDd0S0JWM3hmaTlFUXkvbWxhdkFNRlJCVm04Nk5TbzdBc09HMUlPTXEwM1Uzb29DV0FYCmg5UGR2dkhOZkhoSDE5ZnV0QW5DL0hlT2p3UkYxUWM1MjdhQk1waFlGUUxkaVRoZm1mbWlFL0FoUXFDd1oyb0U3dUNKaEJ0UitLYjEKWkdoakkzNXBIZnNTcUdpRmE3S3IrNWF2ZTgyMlBEY2tlODlNdmc9PQogICAgICAgICAgICAgICAgICAgIDwvZHM6WDUwOUNlcnRpZmljYXRlPgogICAgICAgICAgICAgICAgPC9kczpYNTA5RGF0YT4KICAgICAgICAgICAgPC9kczpLZXlJbmZvPgogICAgICAgIDwvS2V5RGVzY3JpcHRvcj4KICAgICAgICA8S2V5RGVzY3JpcHRvciB1c2U9InNpZ25pbmciPgogICAgICAgICAgICA8ZHM6S2V5SW5mbz4KICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgPGRzOlg1MDlEYXRhPgogICAgICAgICAgICAgICAgICAgIDxkczpYNTA5Q2VydGlmaWNhdGU-Ck1JSUMvVENDQWVXZ0F3SUJBZ0lRTi9HUGVnblQ4YmxQMkVjU2RNTWJCekFOQmdrcWhraUc5dzBCQVFzRkFEQXBNU2N3SlFZRFZRUUQKRXg1TWFYWmxJRWxFSUZOVVV5QlRhV2R1YVc1bklGQjFZbXhwWXlCTFpYa3dIaGNOTWpFd01qRTRNREF3TURBd1doY05Nall3TWpFNApNREF3TURBd1dqQXBNU2N3SlFZRFZRUURFeDVNYVhabElFbEVJRk5VVXlCVGFXZHVhVzVuSUZCMVlteHBZeUJMWlhrd2dnRWlNQTBHCkNTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFEWGRMR1UyTGw1UlBkRFVuS1ErZi9IUzVxaVRheTJjQ2g5VTJBUzZvRE0KNlNPeFZoWUd0b2VKMVZQZWJjTG5wZ0xmaFB4enJ3V29WelhTRUYrVlJRYm5ZSUQySmI0a2hqZ3lFZW9UaGszVnFyVGh3aGFocFNiQgpnMnZvMDZ2SU9wMVRTMlIxQml3SEtUTG9CMWkxSUpuYUlGU0MzQk42cFk0ZmxYV3lMUXQvNUFCWEVsdjJYWkxxWE05RWVmajZKaTQwCm5MSXNpVzRkV3czQkRhL3l3V1cwTXNpVzVvakdxNHZvdmNBZ0VOZS80TlVianU3MGdIUC9XUzVEOWJXNXArT0lRaTcvdW5ybFdlL2gKM0E2anRCYmJSbFhZWGxOK1oyMnVUVHl5Q0QvVzh6ZVhhQUNMdkhhZ3dFTXJRZVBEWEJacWMvaVgya0krb29acjFzQy9IMzlSQWdNQgpBQUdqSVRBZk1CMEdBMVVkRGdRV0JCU3JYMmRtM0x3VDlqYi9wK2JBQWRZUXBFKy9OakFOQmdrcWhraUc5dzBCQVFzRkFBT0NBUUVBCmVxSmZZSG5zQTlxaEd0dFhGZkZwUFc0RFFMaDV3NkpDY2U3dkd2V0lOcjVmcjFEblFkY09yK3d3alEvdHFiY2tBTDJ2NnoxQXFqaFMKNzhrYmZlZ25BUUR3aW9KWjFvbFlZdkxPeEtvYTZIRitiMS9wME1sdWI4WnVrazJuMWIybEtQQkJPaWJPYXNTWTdnUUR3bElaaTd0bAo5bk1UeFVmZFlLK0U1QXh2N0RWbm1VQ3djbm5wVjUvMVNGZE55VzJrV080QzY4cnJqTU92RUNmd3JLa2JmVkpNOGY5a3JFVUJ1b0JGCjhkVER2N0QyWk00UTJidUM3ME5iZmFOV1VYMHlGdktJMEl1VHFrOFJCZkdUUlE0ZlpBYmhNUGF5a0VwQnU2ZE5qVGk1WU9hMGxOcUYKR1M3QXg3bGVDaDV4OWxWOGVsY0xrWHM4eVNvOEFPUUprMGhnSXc9PQogICAgICAgICAgICAgICAgICAgIDwvZHM6WDUwOUNlcnRpZmljYXRlPgogICAgICAgICAgICAgICAgPC9kczpYNTA5RGF0YT4KICAgICAgICAgICAgPC9kczpLZXlJbmZvPgogICAgICAgIDwvS2V5RGVzY3JpcHRvcj4KICAgICAgICA8S2V5RGVzY3JpcHRvciB1c2U9InNpZ25pbmciPgogICAgICAgICAgICA8ZHM6S2V5SW5mbz4KICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgPGRzOlg1MDlEYXRhPgogICAgICAgICAgICAgICAgICAgIDxkczpYNTA5Q2VydGlmaWNhdGU-Ck1JSUMvVENDQWVXZ0F3SUJBZ0lRTi9HUGVnblQ4YmxQMkVjU2RNTWJCekFOQmdrcWhraUc5dzBCQVFzRkFEQXBNU2N3SlFZRFZRUUQKRXg1TWFYWmxJRWxFSUZOVVV5QlRhV2R1YVc1bklGQjFZbXhwWXlCTFpYa3dIaGNOTWpFd01qRTRNREF3TURBd1doY05Nall3TWpFNApNREF3TURBd1dqQXBNU2N3SlFZRFZRUURFeDVNYVhabElFbEVJRk5VVXlCVGFXZHVhVzVuSUZCMVlteHBZeUJMWlhrd2dnRWlNQTBHCkNTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFEWGRMR1UyTGw1UlBkRFVuS1ErZi9IUzVxaVRheTJjQ2g5VTJBUzZvRE0KNlNPeFZoWUd0b2VKMVZQZWJjTG5wZ0xmaFB4enJ3V29WelhTRUYrVlJRYm5ZSUQySmI0a2hqZ3lFZW9UaGszVnFyVGh3aGFocFNiQgpnMnZvMDZ2SU9wMVRTMlIxQml3SEtUTG9CMWkxSUpuYUlGU0MzQk42cFk0ZmxYV3lMUXQvNUFCWEVsdjJYWkxxWE05RWVmajZKaTQwCm5MSXNpVzRkV3czQkRhL3l3V1cwTXNpVzVvakdxNHZvdmNBZ0VOZS80TlVianU3MGdIUC9XUzVEOWJXNXArT0lRaTcvdW5ybFdlL2gKM0E2anRCYmJSbFhZWGxOK1oyMnVUVHl5Q0QvVzh6ZVhhQUNMdkhhZ3dFTXJRZVBEWEJacWMvaVgya0krb29acjFzQy9IMzlSQWdNQgpBQUdqSVRBZk1CMEdBMVVkRGdRV0JCU3JYMmRtM0x3VDlqYi9wK2JBQWRZUXBFKy9OakFOQmdrcWhraUc5dzBCQVFzRkFBT0NBUUVBCmVxSmZZSG5zQTlxaEd0dFhGZkZwUFc0RFFMaDV3NkpDY2U3dkd2V0lOcjVmcjFEblFkY09yK3d3alEvdHFiY2tBTDJ2NnoxQXFqaFMKNzhrYmZlZ25BUUR3aW9KWjFvbFlZdkxPeEtvYTZIRitiMS9wME1sdWI4WnVrazJuMWIybEtQQkJPaWJPYXNTWTdnUUR3bElaaTd0bAo5bk1UeFVmZFlLK0U1QXh2N0RWbm1VQ3djbm5wVjUvMVNGZE55VzJrV080QzY4cnJqTU92RUNmd3JLa2JmVkpNOGY5a3JFVUJ1b0JGCjhkVER2N0QyWk00UTJidUM3ME5iZmFOV1VYMHlGdktJMEl1VHFrOFJCZkdUUlE0ZlpBYmhNUGF5a0VwQnU2ZE5qVGk1WU9hMGxOcUYKR1M3QXg3bGVDaDV4OWxWOGVsY0xrWHM4eVNvOEFPUUprMGhnSXc9PQogICAgICAgICAgICAgICAgICAgIDwvZHM6WDUwOUNlcnRpZmljYXRlPgogICAgICAgICAgICAgICAgPC9kczpYNTA5RGF0YT4KICAgICAgICAgICAgPC9kczpLZXlJbmZvPgogICAgICAgIDwvS2V5RGVzY3JpcHRvcj4KICAgICAgICA8U2luZ2xlTG9nb3V0U2VydmljZSBCaW5kaW5nPSJ1cm46b2FzaXM6bmFtZXM6dGM6U0FNTDoyLjA6YmluZGluZ3M6SFRUUC1QT1NUIiBMb2NhdGlvbj0iaHR0cHM6Ly9sb2dpbi5taWNyb3NvZnRvbmxpbmUuY29tL2xvZ2luLnNyZiIvPgogICAgICAgIDxOYW1lSURGb3JtYXQ-dXJuOm9hc2lzOm5hbWVzOnRjOlNBTUw6MS4xOm5hbWVpZC1mb3JtYXQ6ZW1haWxBZGRyZXNzPC9OYW1lSURGb3JtYXQ-CiAgICAgICAgPE5hbWVJREZvcm1hdD51cm46bWFjZTpzaGliYm9sZXRoOjEuMDpuYW1lSWRlbnRpZmllcjwvTmFtZUlERm9ybWF0PgogICAgICAgIDxOYW1lSURGb3JtYXQ-dXJuOm9hc2lzOm5hbWVzOnRjOlNBTUw6MS4xOm5hbWVpZC1mb3JtYXQ6dW5zcGVjaWZpZWQ8L05hbWVJREZvcm1hdD4KICAgICAgICA8TmFtZUlERm9ybWF0PnVybjpvYXNpczpuYW1lczp0YzpTQU1MOjIuMDpuYW1laWQtZm9ybWF0OnRyYW5zaWVudDwvTmFtZUlERm9ybWF0PgogICAgICAgIDxOYW1lSURGb3JtYXQ-dXJuOm9hc2lzOm5hbWVzOnRjOlNBTUw6Mi4wOm5hbWVpZC1mb3JtYXQ6cGVyc2lzdGVudDwvTmFtZUlERm9ybWF0PgogICAgICAgIDxBc3NlcnRpb25Db25zdW1lclNlcnZpY2UgaW5kZXg9IjAiIGlzRGVmYXVsdD0idHJ1ZSIgQmluZGluZz0idXJuOm9hc2lzOm5hbWVzOnRjOlNBTUw6Mi4wOmJpbmRpbmdzOkhUVFAtUE9TVCIgTG9jYXRpb249Imh0dHBzOi8vbG9naW4ubWljcm9zb2Z0b25saW5lLmNvbS9sb2dpbi5zcmYiLz4KICAgICAgICA8QXNzZXJ0aW9uQ29uc3VtZXJTZXJ2aWNlIGluZGV4PSIxIiBpc0RlZmF1bHQ9ImZhbHNlIiBCaW5kaW5nPSJ1cm46b2FzaXM6bmFtZXM6dGM6U0FNTDoyLjA6YmluZGluZ3M6SFRUUC1QT1NULVNpbXBsZVNpZ24iIExvY2F0aW9uPSJodHRwczovL2xvZ2luLm1pY3Jvc29mdG9ubGluZS5jb20vbG9naW4uc3JmIi8-CiAgICAgICAgPEFzc2VydGlvbkNvbnN1bWVyU2VydmljZSBpbmRleD0iMiIgaXNEZWZhdWx0PSJmYWxzZSIgQmluZGluZz0idXJuOm9hc2lzOm5hbWVzOnRjOlNBTUw6Mi4wOmJpbmRpbmdzOlBBT1MiIExvY2F0aW9uPSJodHRwczovL2xvZ2luLm1pY3Jvc29mdG9ubGluZS5jb20vbG9naW4uc3JmIi8-CiAgICA8L1NQU1NPRGVzY3JpcHRvcj4KPC9FbnRpdHlEZXNjcmlwdG9yPgoK",
      "entityId": "urn:federation:MicrosoftOnline",
      "entityLocation": "remote",
      "serviceProvider": {
        "advanced": {
          "idpProxy": {},
          "saeConfiguration": {},
        },
        "assertionContent": {
          "basicAuthentication": {},
          "nameIdFormat": {
            "nameIdFormatList": [
              "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress",
              "urn:mace:shibboleth:1.0:nameIdentifier",
              "urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified",
              "urn:oasis:names:tc:SAML:2.0:nameid-format:transient",
              "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
            ],
          },
          "signingAndEncryption": {
            "encryption": {},
            "requestResponseSigning": {
              "assertion": true,
            },
            "secretIdAndAlgorithms": {},
          },
        },
        "assertionProcessing": {
          "attributeMapper": {
            "attributeMap": [
              {
                "binary": false,
                "localAttribute": "mail",
                "samlAttribute": "IDPEmail",
              },
              {
                "binary": false,
                "localAttribute": "UOPClassID",
                "samlAttribute": "UOPClassID",
              },
            ],
          },
          "responseArtifactMessageEncoding": {
            "encoding": "URI",
          },
        },
        "services": {
          "serviceAttributes": {
            "assertionConsumerService": [
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
                "index": 0,
                "isDefault": true,
                "location": "https://login.microsoftonline.com/login.srf",
              },
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST-SimpleSign",
                "index": 1,
                "isDefault": false,
                "location": "https://login.microsoftonline.com/login.srf",
              },
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:PAOS",
                "index": 2,
                "isDefault": false,
                "location": "https://login.microsoftonline.com/login.srf",
              },
            ],
            "singleLogoutService": [
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
                "location": "https://login.microsoftonline.com/login.srf",
              },
            ],
          },
        },
      },
    },
  },
  "scripts": {
    "23143919-6b78-40c3-b25e-beca19b229e0": {
      "_id": "23143919-6b78-40c3-b25e-beca19b229e0",
      "context": "SOCIAL_IDP_PROFILE_TRANSFORMATION",
      "createdBy": "null",
      "creationDate": 0,
      "default": false,
      "description": "Normalizes raw profile data from GitHub",
      "language": "GROOVY",
      "lastModifiedBy": "null",
      "lastModifiedDate": 0,
      "name": "GitHub Profile Normalization (VS)",
      "script": ""/*\\n * Copyright 2020 ForgeRock AS. All Rights Reserved\\n *\\n * Use of this code requires a commercial software license with ForgeRock AS.\\n * or with one of its affiliates. All use shall be exclusively subject\\n * to such license between the licensee and ForgeRock AS.\\n */\\n\\nimport static org.forgerock.json.JsonValue.field\\nimport static org.forgerock.json.JsonValue.json\\nimport static org.forgerock.json.JsonValue.object\\n\\nlogger.warning(\\"GitHub rawProfile: \\"+rawProfile)\\n\\nreturn json(object(\\n        field(\\"id\\", rawProfile.id),\\n        field(\\"displayName\\", rawProfile.name),\\n        field(\\"givenName\\", rawProfile.first_name),\\n        field(\\"familyName\\", rawProfile.last_name),\\n        field(\\"photoUrl\\", rawProfile.picture.data.url),\\n        field(\\"email\\", rawProfile.email),\\n        field(\\"username\\", rawProfile.email)))"",
    },
    "58c824ae-84ed-4724-82cd-db128fc3f6c": {
      "_id": "58c824ae-84ed-4724-82cd-db128fc3f6c",
      "context": "SOCIAL_IDP_PROFILE_TRANSFORMATION",
      "createdBy": "null",
      "creationDate": 0,
      "default": true,
      "description": "Converts a normalized social profile into a managed user",
      "language": "GROOVY",
      "lastModifiedBy": "null",
      "lastModifiedDate": 0,
      "name": "Normalized Profile to Managed User",
      "script": ""/*\\n * Copyright 2020 ForgeRock AS. All Rights Reserved\\n *\\n * Use of this code requires a commercial software license with ForgeRock AS.\\n * or with one of its affiliates. All use shall be exclusively subject\\n * to such license between the licensee and ForgeRock AS.\\n */\\n\\nimport static org.forgerock.json.JsonValue.field\\nimport static org.forgerock.json.JsonValue.json\\nimport static org.forgerock.json.JsonValue.object\\n\\nimport org.forgerock.json.JsonValue\\n\\nJsonValue managedUser = json(object(\\n        field(\\"givenName\\", normalizedProfile.givenName),\\n        field(\\"sn\\", normalizedProfile.familyName),\\n        field(\\"mail\\", normalizedProfile.email),\\n        field(\\"userName\\", normalizedProfile.username)))\\n\\nif (normalizedProfile.postalAddress.isNotNull()) managedUser.put(\\"postalAddress\\", normalizedProfile.postalAddress)\\nif (normalizedProfile.addressLocality.isNotNull()) managedUser.put(\\"city\\", normalizedProfile.addressLocality)\\nif (normalizedProfile.addressRegion.isNotNull()) managedUser.put(\\"stateProvince\\", normalizedProfile.addressRegion)\\nif (normalizedProfile.postalCode.isNotNull()) managedUser.put(\\"postalCode\\", normalizedProfile.postalCode)\\nif (normalizedProfile.country.isNotNull()) managedUser.put(\\"country\\", normalizedProfile.country)\\nif (normalizedProfile.phone.isNotNull()) managedUser.put(\\"telephoneNumber\\", normalizedProfile.phone)\\n\\n// if the givenName and familyName is null or empty\\n// then add a boolean flag to the shared state to indicate names are not present\\n// this could be used elsewhere\\n// for eg. this could be used in a scripted decision node to by-pass patching\\n// the user object with blank values when givenName  and familyName is not present\\nboolean noGivenName = normalizedProfile.givenName.isNull() || (!normalizedProfile.givenName.asString()?.trim())\\nboolean noFamilyName = normalizedProfile.familyName.isNull() || (!normalizedProfile.familyName.asString()?.trim())\\nsharedState.put(\\"nameEmptyOrNull\\", noGivenName && noFamilyName)\\n\\nreturn managedUser\\n"",
    },
    "739bdc48-fd24-4c52-b353-88706d75558a": {
      "_id": "739bdc48-fd24-4c52-b353-88706d75558a",
      "context": "AUTHENTICATION_TREE_DECISION_NODE",
      "createdBy": "null",
      "creationDate": 0,
      "default": false,
      "description": "Check if username has already been collected.",
      "language": "JAVASCRIPT",
      "lastModifiedBy": "null",
      "lastModifiedDate": 0,
      "name": "Check Username",
      "script": ""/* Check Username\\n *\\n * Author: volker.scheuber@forgerock.com\\n * \\n * Check if username has already been collected.\\n * Return \\"known\\" if yes, \\"unknown\\" otherwise.\\n * \\n * This script does not need to be parametrized. It will work properly as is.\\n * \\n * The Scripted Decision Node needs the following outcomes defined:\\n * - known\\n * - unknown\\n */\\n(function () {\\n    if (null != sharedState.get(\\"username\\")) {\\n        outcome = \\"known\\";\\n    }\\n    else {\\n        outcome = \\"unknown\\";\\n    }\\n}());"",
    },
    "dbe0bf9a-72aa-49d5-8483-9db147985a47": {
      "_id": "dbe0bf9a-72aa-49d5-8483-9db147985a47",
      "context": "SOCIAL_IDP_PROFILE_TRANSFORMATION",
      "createdBy": "null",
      "creationDate": 0,
      "default": false,
      "description": "Normalizes raw profile data from ADFS",
      "language": "JAVASCRIPT",
      "lastModifiedBy": "null",
      "lastModifiedDate": 0,
      "name": "ADFS Profile Normalization (JS)",
      "script": ""/*\\n * Copyright 2022 ForgeRock AS. All Rights Reserved\\n *\\n * Use of this code requires a commercial software license with ForgeRock AS\\n * or with one of its affiliates. All use shall be exclusively subject\\n * to such license between the licensee and ForgeRock AS.\\n */\\n\\n/*\\n * This script returns the social identity profile information for the authenticating user\\n * in a standard form expected by the Social Provider Handler Node.\\n *\\n * Defined variables:\\n * rawProfile - The social identity provider profile information for the authenticating user.\\n *              JsonValue (1).\\n * logger - The debug logger instance:\\n *          https://backstage.forgerock.com/docs/am/7/scripting-guide/scripting-api-global-logger.html#scripting-api-global-logger.\\n * realm - String (primitive).\\n *         The name of the realm the user is authenticating to.\\n * requestHeaders - TreeMap (2).\\n *                  The object that provides methods for accessing headers in the login request:\\n *                  https://backstage.forgerock.com/docs/am/7/authentication-guide/scripting-api-node.html#scripting-api-node-requestHeaders.\\n * requestParameters - TreeMap (2).\\n *                     The object that contains the authentication request parameters.\\n * selectedIdp - String (primitive).\\n *               The social identity provider name. For example: google.\\n * sharedState - LinkedHashMap (3).\\n *               The object that holds the state of the authentication tree and allows data exchange between the stateless nodes:\\n *               https://backstage.forgerock.com/docs/am/7/auth-nodes/core-action.html#accessing-tree-state.\\n * transientState - LinkedHashMap (3).\\n *                  The object for storing sensitive information that must not leave the server unencrypted,\\n *                  and that may not need to persist between authentication requests during the authentication session:\\n *                  https://backstage.forgerock.com/docs/am/7/auth-nodes/core-action.html#accessing-tree-state.\\n *\\n * Return - a JsonValue (1).\\n *          The result of the last statement in the script is returned to the server.\\n *          Currently, the Immediately Invoked Function Expression (also known as Self-Executing Anonymous Function)\\n *          is the last (and only) statement in this script, and its return value will become the script result.\\n *          Do not use \\"return variable\\" statement outside of a function definition.\\n *\\n *          This script's last statement should result in a JsonValue (1) with the following keys:\\n *          {\\n *              {\\"displayName\\": \\"corresponding-social-identity-provider-value\\"},\\n *              {\\"email\\": \\"corresponding-social-identity-provider-value\\"},\\n *              {\\"familyName\\": \\"corresponding-social-identity-provider-value\\"},\\n *              {\\"givenName\\": \\"corresponding-social-identity-provider-value\\"},\\n *              {\\"id\\": \\"corresponding-social-identity-provider-value\\"},\\n *              {\\"locale\\": \\"corresponding-social-identity-provider-value\\"},\\n *              {\\"photoUrl\\": \\"corresponding-social-identity-provider-value\\"},\\n *              {\\"username\\": \\"corresponding-social-identity-provider-value\\"}\\n *          }\\n *\\n *          The consumer of this data defines which keys are required and which are optional.\\n *          For example, the script associated with the Social Provider Handler Node and,\\n *          ultimately, the managed object created/updated with this data\\n *          will expect certain keys to be populated.\\n *          In some common default configurations, the following keys are required to be not empty:\\n *          username, givenName, familyName, email.\\n *\\n *          From RFC4517: A value of the Directory String syntax is a string of one or more\\n *          arbitrary characters from the Universal Character Set (UCS).\\n *          A zero-length character string is not permitted.\\n *\\n * (1) JsonValue - https://backstage.forgerock.com/docs/am/7/apidocs/org/forgerock/json/JsonValue.html.\\n * (2) TreeMap - https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/util/TreeMap.html.\\n * (3) LinkedHashMap - https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/util/LinkedHashMap.html.\\n */\\n\\n(function () {\\n    var frJava = JavaImporter(\\n        org.forgerock.json.JsonValue\\n    );\\n\\n    var normalizedProfileData = frJava.JsonValue.json(frJava.JsonValue.object());\\n  \\n  \\t//logger.message('Seguin rawProfile: '+rawProfile);\\n\\n    normalizedProfileData.put('id', rawProfile.get('sub').asString());\\n    normalizedProfileData.put('displayName', rawProfile.get('givenName').asString() + ' ' + rawProfile.get('sn').asString());\\n    normalizedProfileData.put('email', rawProfile.get('mail').asString());\\n    normalizedProfileData.put('givenName', rawProfile.get('givenName').asString());\\n    normalizedProfileData.put('familyName', rawProfile.get('sn').asString());\\n    normalizedProfileData.put('username', rawProfile.get('upn').asString());\\n    normalizedProfileData.put('roles', rawProfile.get('roles').asString());\\n  \\n  \\t//logger.message('Seguin normalizedProfileData: '+normalizedProfileData);\\n\\n    return normalizedProfileData;\\n}());"",
    },
  },
  "socialIdentityProviders": {
    "adfs": {
      "_id": "adfs",
      "_type": {
        "_id": "oidcConfig",
        "collection": true,
        "name": "Client configuration for providers that implement the OpenID Connect specification.",
      },
      "acrValues": [],
      "authenticationIdKey": "sub",
      "authorizationEndpoint": "https://adfs.mytestrun.com/adfs/oauth2/authorize",
      "clientAuthenticationMethod": "CLIENT_SECRET_POST",
      "clientId": "aa9a179e-cdba-4db8-8477-3d1069d5ec04",
      "clientSecret": null,
      "enableNativeNonce": true,
      "enabled": true,
      "encryptJwtRequestParameter": false,
      "encryptedIdTokens": false,
      "issuer": "https://adfs.mytestrun.com/adfs",
      "issuerComparisonCheckType": "EXACT",
      "jwksUriEndpoint": "https://adfs.mytestrun.com/adfs/discovery/keys",
      "jwtEncryptionAlgorithm": "NONE",
      "jwtEncryptionMethod": "NONE",
      "jwtRequestParameterOption": "NONE",
      "jwtSigningAlgorithm": "RS256",
      "pkceMethod": "S256",
      "privateKeyJwtExpTime": 600,
      "redirectURI": "https://idc.scheuber.io/login",
      "responseMode": "DEFAULT",
      "revocationCheckOptions": [],
      "scopeDelimiter": " ",
      "scopes": [
        "openid",
        "profile",
        "email",
      ],
      "tokenEndpoint": "https://adfs.mytestrun.com/adfs/oauth2/token",
      "transform": "dbe0bf9a-72aa-49d5-8483-9db147985a47",
      "uiConfig": {
        "buttonClass": "",
        "buttonCustomStyle": "background-color: #fff; border-color: #8b8b8b; color: #8b8b8b;",
        "buttonCustomStyleHover": "background-color: #fff; border-color: #8b8b8b; color: #8b8b8b;",
        "buttonDisplayName": "Microsoft ADFS",
        "buttonImage": "/login/images/microsoft-logo.png",
        "iconBackground": "#0078d7",
        "iconClass": "fa-windows",
        "iconFontColor": "white",
      },
      "useCustomTrustStore": false,
      "userInfoResponseType": "JSON",
      "wellKnownEndpoint": "https://adfs.mytestrun.com/adfs/.well-known/openid-configuration",
    },
    "github": {
      "_id": "github",
      "_type": {
        "_id": "oauth2Config",
        "collection": true,
        "name": "Client configuration for providers that implement the OAuth2 specification.",
      },
      "authenticationIdKey": "id",
      "authorizationEndpoint": "https://github.com/login/oauth/authorize",
      "clientAuthenticationMethod": "CLIENT_SECRET_POST",
      "clientId": "bdae6d141d4dcf95a630",
      "clientSecret": null,
      "enabled": true,
      "issuerComparisonCheckType": "EXACT",
      "jwtEncryptionAlgorithm": "NONE",
      "jwtEncryptionMethod": "NONE",
      "jwtSigningAlgorithm": "NONE",
      "pkceMethod": "S256",
      "privateKeyJwtExpTime": 600,
      "redirectURI": "https://idc.scheuber.io/login",
      "responseMode": "DEFAULT",
      "revocationCheckOptions": [],
      "scopeDelimiter": " ",
      "scopes": [
        "user",
      ],
      "tokenEndpoint": "https://ig.mytestrun.com/login/oauth/access_token",
      "transform": "23143919-6b78-40c3-b25e-beca19b229e0",
      "uiConfig": {
        "buttonCustomStyle": "background-color: #fff; color: #757575; border-color: #ddd;",
        "buttonCustomStyleHover": "color: #6d6d6d; background-color: #eee; border-color: #ccc;",
        "buttonDisplayName": "GitHub",
        "buttonImage": "https://cdn-icons-png.flaticon.com/512/25/25231.png",
        "iconBackground": "#4184f3",
        "iconFontColor": "white",
      },
      "useCustomTrustStore": false,
      "userInfoEndpoint": "https://ig.mytestrun.com/user",
    },
  },
  "themes": [],
  "tree": {
    "_id": "FrodoTestJourney3",
    "_rev": "789342746",
    "description": "Frodo test journey utilizing a variety of nodes and dependencies to test support for complex journeys.",
    "enabled": true,
    "entryNodeId": "46643303-aeb2-4873-9df1-59db4958cc34",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "46643303-aeb2-4873-9df1-59db4958cc34": {
        "connections": {
          "known": "9381fc70-1a31-40de-85de-23faf97e7b28",
          "unknown": "ab9f607b-0f87-4e46-972d-fa726cd1c8f0",
        },
        "displayName": "Check Username",
        "nodeType": "ScriptedDecisionNode",
        "x": 210,
        "y": 305.5,
      },
      "4b5d893f-0ade-4385-88d6-a281754fe498": {
        "connections": {
          "ACCOUNT_EXISTS": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
          "NO_ACCOUNT": "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59",
        },
        "displayName": "Social Login",
        "nodeType": "SocialProviderHandlerNode",
        "x": 685,
        "y": 371.8333333333333,
      },
      "9381fc70-1a31-40de-85de-23faf97e7b28": {
        "connections": {
          "localAuthentication": "a681751d-ab8c-4cb8-8be9-92b4cc688b69",
          "socialAuthentication": "4b5d893f-0ade-4385-88d6-a281754fe498",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 440,
        "y": 424,
      },
      "a681751d-ab8c-4cb8-8be9-92b4cc688b69": {
        "connections": {
          "CANCELLED": "e60801b1-9b6f-4017-83d4-1695ca982022",
          "EXPIRED": "e60801b1-9b6f-4017-83d4-1695ca982022",
          "FALSE": "e301438c-0bd0-429c-ab0c-66126501069a",
          "LOCKED": "e301438c-0bd0-429c-ab0c-66126501069a",
          "TRUE": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Validate Creds",
        "nodeType": "IdentityStoreDecisionNode",
        "x": 685,
        "y": 143.66666666666666,
      },
      "ab9f607b-0f87-4e46-972d-fa726cd1c8f0": {
        "connections": {
          "localAuthentication": "a681751d-ab8c-4cb8-8be9-92b4cc688b69",
          "socialAuthentication": "4b5d893f-0ade-4385-88d6-a281754fe498",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 440,
        "y": 80,
      },
      "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59": {
        "connections": {
          "EMAIL_NOT_SENT": "e301438c-0bd0-429c-ab0c-66126501069a",
          "EMAIL_SENT": "dd0d8532-e7a2-40af-b05f-2913432fc97e",
        },
        "displayName": "Email Template Node",
        "nodeType": "EmailTemplateNode",
        "x": 915,
        "y": 309.3333333333333,
      },
      "dd0d8532-e7a2-40af-b05f-2913432fc97e": {
        "connections": {
          "ACCOUNT_EXISTS": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
          "NO_ACCOUNT": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "SAML2 Authentication",
        "nodeType": "product-Saml2Node",
        "x": 1163,
        "y": 305.5,
      },
      "e60801b1-9b6f-4017-83d4-1695ca982022": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Login",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 915,
        "y": 168.66666666666669,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1417,
        "y": 192,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1417,
        "y": 286,
      },
      "startNode": {
        "x": 70,
        "y": 323,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
}
`;

exports[`JourneyOps getJourneys() 1: Get all journeys 1`] = `
[
  {
    "_id": "FrodoTestJourney1",
    "_rev": "148461258",
    "description": "Frodo test journey",
    "enabled": true,
    "entryNodeId": "cc4b5c15-4af6-4a94-b0c6-fc6f31895b4f",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "1c586352-4568-4918-8985-876f142d1427": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Validate Credentials",
        "nodeType": "DataStoreDecisionNode",
        "x": 455,
        "y": 137.5,
      },
      "cc4b5c15-4af6-4a94-b0c6-fc6f31895b4f": {
        "connections": {
          "outcome": "1c586352-4568-4918-8985-876f142d1427",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 210,
        "y": 109,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 692,
        "y": 230,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 692,
        "y": 80,
      },
      "startNode": {
        "x": 70,
        "y": 155,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
  {
    "_id": "FrodoTestJourney2",
    "_rev": "1049158964",
    "description": "Frodo test journey",
    "enabled": true,
    "entryNodeId": "e3bc0d65-9f4d-4ca3-aa44-69fee11753a1",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "e3bc0d65-9f4d-4ca3-aa44-69fee11753a1": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Login",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 210,
        "y": 137.5,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 440,
        "y": 80,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 440,
        "y": 230,
      },
      "startNode": {
        "x": 70,
        "y": 155,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
  {
    "_id": "FrodoTestJourney3",
    "_rev": "789342746",
    "description": "Frodo test journey utilizing a variety of nodes and dependencies to test support for complex journeys.",
    "enabled": true,
    "entryNodeId": "46643303-aeb2-4873-9df1-59db4958cc34",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "46643303-aeb2-4873-9df1-59db4958cc34": {
        "connections": {
          "known": "9381fc70-1a31-40de-85de-23faf97e7b28",
          "unknown": "ab9f607b-0f87-4e46-972d-fa726cd1c8f0",
        },
        "displayName": "Check Username",
        "nodeType": "ScriptedDecisionNode",
        "x": 210,
        "y": 305.5,
      },
      "4b5d893f-0ade-4385-88d6-a281754fe498": {
        "connections": {
          "ACCOUNT_EXISTS": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
          "NO_ACCOUNT": "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59",
        },
        "displayName": "Social Login",
        "nodeType": "SocialProviderHandlerNode",
        "x": 685,
        "y": 371.8333333333333,
      },
      "9381fc70-1a31-40de-85de-23faf97e7b28": {
        "connections": {
          "localAuthentication": "a681751d-ab8c-4cb8-8be9-92b4cc688b69",
          "socialAuthentication": "4b5d893f-0ade-4385-88d6-a281754fe498",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 440,
        "y": 424,
      },
      "a681751d-ab8c-4cb8-8be9-92b4cc688b69": {
        "connections": {
          "CANCELLED": "e60801b1-9b6f-4017-83d4-1695ca982022",
          "EXPIRED": "e60801b1-9b6f-4017-83d4-1695ca982022",
          "FALSE": "e301438c-0bd0-429c-ab0c-66126501069a",
          "LOCKED": "e301438c-0bd0-429c-ab0c-66126501069a",
          "TRUE": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Validate Creds",
        "nodeType": "IdentityStoreDecisionNode",
        "x": 685,
        "y": 143.66666666666666,
      },
      "ab9f607b-0f87-4e46-972d-fa726cd1c8f0": {
        "connections": {
          "localAuthentication": "a681751d-ab8c-4cb8-8be9-92b4cc688b69",
          "socialAuthentication": "4b5d893f-0ade-4385-88d6-a281754fe498",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 440,
        "y": 80,
      },
      "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59": {
        "connections": {
          "EMAIL_NOT_SENT": "e301438c-0bd0-429c-ab0c-66126501069a",
          "EMAIL_SENT": "dd0d8532-e7a2-40af-b05f-2913432fc97e",
        },
        "displayName": "Email Template Node",
        "nodeType": "EmailTemplateNode",
        "x": 915,
        "y": 309.3333333333333,
      },
      "dd0d8532-e7a2-40af-b05f-2913432fc97e": {
        "connections": {
          "ACCOUNT_EXISTS": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
          "NO_ACCOUNT": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "SAML2 Authentication",
        "nodeType": "product-Saml2Node",
        "x": 1163,
        "y": 305.5,
      },
      "e60801b1-9b6f-4017-83d4-1695ca982022": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Login",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 915,
        "y": 168.66666666666669,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1417,
        "y": 192,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1417,
        "y": 286,
      },
      "startNode": {
        "x": 70,
        "y": 323,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
  {
    "_id": "FrodoTestJourney6",
    "_rev": "-1165751593",
    "description": "Frodo test journey",
    "enabled": true,
    "entryNodeId": "a2fda63a-859d-44c0-ba5e-ac0bd5d82040",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "20dde5d1-fe72-473a-b811-c16fe753fef5": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Validate Credentials",
        "nodeType": "DataStoreDecisionNode",
        "x": 455,
        "y": 137.5,
      },
      "a2fda63a-859d-44c0-ba5e-ac0bd5d82040": {
        "connections": {
          "outcome": "20dde5d1-fe72-473a-b811-c16fe753fef5",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 210,
        "y": 109,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 692,
        "y": 230,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 692,
        "y": 80,
      },
      "startNode": {
        "x": 70,
        "y": 155,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
  {
    "_id": "FrodoTestJourney7",
    "_rev": "120187468",
    "description": "Frodo test journey",
    "enabled": true,
    "entryNodeId": "d6171ae2-903d-41cc-b851-af6414e56d56",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "a9adc345-4fef-4d86-831a-9d8bc952f844": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Validate Credentials",
        "nodeType": "DataStoreDecisionNode",
        "x": 455,
        "y": 137.5,
      },
      "d6171ae2-903d-41cc-b851-af6414e56d56": {
        "connections": {
          "outcome": "a9adc345-4fef-4d86-831a-9d8bc952f844",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 210,
        "y": 109,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 692,
        "y": 230,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 692,
        "y": 80,
      },
      "startNode": {
        "x": 70,
        "y": 155,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
  {
    "_id": "FrodoTestJourney8",
    "_rev": "-1975989323",
    "description": "Frodo test journey",
    "enabled": false,
    "entryNodeId": "b20da99f-e162-4b03-be45-13379995867f",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "277c21a5-1474-45f9-aa8c-b39eaffc1b2b": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Validate Credentials",
        "nodeType": "DataStoreDecisionNode",
        "x": 455,
        "y": 137.5,
      },
      "b20da99f-e162-4b03-be45-13379995867f": {
        "connections": {
          "outcome": "277c21a5-1474-45f9-aa8c-b39eaffc1b2b",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 210,
        "y": 109,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 692,
        "y": 230,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 692,
        "y": 80,
      },
      "startNode": {
        "x": 70,
        "y": 155,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
  {
    "_id": "FrodoTestJourney9",
    "_rev": "-280938100",
    "description": "Frodo test journey",
    "enabled": false,
    "entryNodeId": "82d90fa0-9345-46b5-b5b1-50f732a387ec",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "82d90fa0-9345-46b5-b5b1-50f732a387ec": {
        "connections": {
          "outcome": "f07fba3c-b2fb-4298-94c7-c3379132ef74",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 210,
        "y": 109,
      },
      "f07fba3c-b2fb-4298-94c7-c3379132ef74": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Validate Credentials",
        "nodeType": "DataStoreDecisionNode",
        "x": 455,
        "y": 137.5,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 692,
        "y": 230,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 692,
        "y": 80,
      },
      "startNode": {
        "x": 70,
        "y": 155,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
  {
    "_id": "j00",
    "_rev": "-1046982804",
    "enabled": true,
    "entryNodeId": "240d83a3-2268-4ae1-9c20-30b65be6adab",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "1e0789eb-3394-4f7d-9db4-f06cb4d71eab": {
        "connections": {
          "true": "b787efaf-f1a6-433a-8194-85b7c3df9c07",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 392,
        "y": 173.015625,
      },
      "240d83a3-2268-4ae1-9c20-30b65be6adab": {
        "connections": {
          "level only": "2a9c577f-402a-4fba-94f7-ccf7c479553b",
          "none": "d1c184a0-5fbb-45a0-b0aa-36932833814c",
          "shared and level": "1e0789eb-3394-4f7d-9db4-f06cb4d71eab",
          "shared only": "d481e647-675e-4d0e-9bd3-dd4d41b7fc2a",
        },
        "displayName": "mode",
        "nodeType": "ScriptedDecisionNode",
        "x": 167,
        "y": 210.015625,
      },
      "2a9c577f-402a-4fba-94f7-ccf7c479553b": {
        "connections": {
          "true": "d1c184a0-5fbb-45a0-b0aa-36932833814c",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 395,
        "y": 345.015625,
      },
      "b787efaf-f1a6-433a-8194-85b7c3df9c07": {
        "connections": {
          "true": "d1c184a0-5fbb-45a0-b0aa-36932833814c",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 598,
        "y": 173.015625,
      },
      "d1c184a0-5fbb-45a0-b0aa-36932833814c": {
        "connections": {
          "true": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "debug",
        "nodeType": "ScriptedDecisionNode",
        "x": 1033,
        "y": 261.015625,
      },
      "d481e647-675e-4d0e-9bd3-dd4d41b7fc2a": {
        "connections": {
          "true": "d1c184a0-5fbb-45a0-b0aa-36932833814c",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 393,
        "y": 259.015625,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1236,
        "y": 145,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1236,
        "y": 253,
      },
      "startNode": {
        "x": 50,
        "y": 250,
      },
    },
    "uiConfig": {
      "categories": "[]",
    },
  },
  {
    "_id": "j01",
    "_rev": "41789699",
    "enabled": true,
    "entryNodeId": "b9c26251-9d4d-4499-b8e9-518f35111dbf",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "7e975947-efba-4a50-97ea-7cbe3fbf7416": {
        "connections": {
          "true": "aa97f870-d95e-4861-b756-64b6423dd7da",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 395,
        "y": 345.015625,
      },
      "aa97f870-d95e-4861-b756-64b6423dd7da": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "nest",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 816,
        "y": 233.015625,
      },
      "b9c26251-9d4d-4499-b8e9-518f35111dbf": {
        "connections": {
          "level only": "7e975947-efba-4a50-97ea-7cbe3fbf7416",
          "none": "aa97f870-d95e-4861-b756-64b6423dd7da",
          "shared and level": "fa62ae77-1e86-4939-a773-e428259fac97",
          "shared only": "ba0ed11d-850f-4b4a-81bc-0d4ad07736df",
        },
        "displayName": "mode",
        "nodeType": "ScriptedDecisionNode",
        "x": 167,
        "y": 210.015625,
      },
      "ba0ed11d-850f-4b4a-81bc-0d4ad07736df": {
        "connections": {
          "true": "aa97f870-d95e-4861-b756-64b6423dd7da",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 393,
        "y": 259.015625,
      },
      "d2c7ef78-6b25-40d6-b58e-6ddca3c1f787": {
        "connections": {
          "true": "aa97f870-d95e-4861-b756-64b6423dd7da",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 598,
        "y": 173.015625,
      },
      "fa62ae77-1e86-4939-a773-e428259fac97": {
        "connections": {
          "true": "d2c7ef78-6b25-40d6-b58e-6ddca3c1f787",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 392,
        "y": 173.015625,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1236,
        "y": 145,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1236,
        "y": 253,
      },
      "startNode": {
        "x": 50,
        "y": 250,
      },
    },
    "uiConfig": {
      "categories": "[]",
    },
  },
  {
    "_id": "j02",
    "_rev": "-785066246",
    "enabled": true,
    "entryNodeId": "33791a7d-d14a-460f-806b-5fc3113a1e13",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "1fafe9cd-4a2e-42b9-b326-ea1a94325a40": {
        "connections": {
          "true": "f192e72d-aa85-447b-af66-592a60f0c6c0",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 393,
        "y": 259.015625,
      },
      "33791a7d-d14a-460f-806b-5fc3113a1e13": {
        "connections": {
          "level only": "4ee0bb06-5335-403e-810b-72d574247dfe",
          "none": "f192e72d-aa85-447b-af66-592a60f0c6c0",
          "shared and level": "a679285d-8718-4db3-ba08-e743ab7eb086",
          "shared only": "1fafe9cd-4a2e-42b9-b326-ea1a94325a40",
        },
        "displayName": "mode",
        "nodeType": "ScriptedDecisionNode",
        "x": 167,
        "y": 210.015625,
      },
      "4ee0bb06-5335-403e-810b-72d574247dfe": {
        "connections": {
          "true": "f192e72d-aa85-447b-af66-592a60f0c6c0",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 395,
        "y": 345.015625,
      },
      "5e6d7b3b-e381-4395-ba18-ca807b6adb48": {
        "connections": {
          "true": "f192e72d-aa85-447b-af66-592a60f0c6c0",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 598,
        "y": 173.015625,
      },
      "a679285d-8718-4db3-ba08-e743ab7eb086": {
        "connections": {
          "true": "5e6d7b3b-e381-4395-ba18-ca807b6adb48",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 392,
        "y": 173.015625,
      },
      "f192e72d-aa85-447b-af66-592a60f0c6c0": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "nest",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 816,
        "y": 233.015625,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1236,
        "y": 145,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1236,
        "y": 253,
      },
      "startNode": {
        "x": 50,
        "y": 250,
      },
    },
    "uiConfig": {
      "categories": "[]",
    },
  },
  {
    "_id": "j03",
    "_rev": "-136651648",
    "enabled": true,
    "entryNodeId": "ffc4902e-5d39-4006-85d4-263792cbf12b",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "40b880dd-fae5-4618-8a5a-15f096a1bd31": {
        "connections": {
          "true": "da18dc78-fbb4-488c-bcc0-dfec4d6f9ee1",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 393,
        "y": 259.015625,
      },
      "789a5583-b8eb-4d0a-92ae-ac0a83e7e2ad": {
        "connections": {
          "true": "8fb91c4d-de64-49d8-83dc-7c03b7899613",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 392,
        "y": 173.015625,
      },
      "8fb91c4d-de64-49d8-83dc-7c03b7899613": {
        "connections": {
          "true": "da18dc78-fbb4-488c-bcc0-dfec4d6f9ee1",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 598,
        "y": 173.015625,
      },
      "da18dc78-fbb4-488c-bcc0-dfec4d6f9ee1": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "nest",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 816,
        "y": 233.015625,
      },
      "da4c931c-ed4e-4451-9e7a-239a66f5bdf6": {
        "connections": {
          "true": "da18dc78-fbb4-488c-bcc0-dfec4d6f9ee1",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 395,
        "y": 345.015625,
      },
      "ffc4902e-5d39-4006-85d4-263792cbf12b": {
        "connections": {
          "level only": "da4c931c-ed4e-4451-9e7a-239a66f5bdf6",
          "none": "da18dc78-fbb4-488c-bcc0-dfec4d6f9ee1",
          "shared and level": "789a5583-b8eb-4d0a-92ae-ac0a83e7e2ad",
          "shared only": "40b880dd-fae5-4618-8a5a-15f096a1bd31",
        },
        "displayName": "mode",
        "nodeType": "ScriptedDecisionNode",
        "x": 167,
        "y": 210.015625,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1236,
        "y": 145,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1236,
        "y": 253,
      },
      "startNode": {
        "x": 50,
        "y": 250,
      },
    },
    "uiConfig": {
      "categories": "[]",
    },
  },
  {
    "_id": "j04",
    "_rev": "-37810069",
    "enabled": true,
    "entryNodeId": "a3a5259d-07be-4ff3-a62d-82da3be53383",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "1ab9abc3-5b0f-4eff-bbdd-4cb03eed55d7": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "nest",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 816,
        "y": 233.015625,
      },
      "31b2f947-d118-4593-9037-47631e4c6362": {
        "connections": {
          "true": "1ab9abc3-5b0f-4eff-bbdd-4cb03eed55d7",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 598,
        "y": 173.015625,
      },
      "a3a5259d-07be-4ff3-a62d-82da3be53383": {
        "connections": {
          "level only": "a5cf5d6f-4a80-4d3f-86da-b1a0f32a167c",
          "none": "1ab9abc3-5b0f-4eff-bbdd-4cb03eed55d7",
          "shared and level": "f2728a6b-f6c3-4b17-a967-a8dd9d7af81b",
          "shared only": "a899b13d-1bd0-4b52-b06b-68f6f6a3ded2",
        },
        "displayName": "mode",
        "nodeType": "ScriptedDecisionNode",
        "x": 167,
        "y": 210.015625,
      },
      "a5cf5d6f-4a80-4d3f-86da-b1a0f32a167c": {
        "connections": {
          "true": "1ab9abc3-5b0f-4eff-bbdd-4cb03eed55d7",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 395,
        "y": 345.015625,
      },
      "a899b13d-1bd0-4b52-b06b-68f6f6a3ded2": {
        "connections": {
          "true": "1ab9abc3-5b0f-4eff-bbdd-4cb03eed55d7",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 393,
        "y": 259.015625,
      },
      "f2728a6b-f6c3-4b17-a967-a8dd9d7af81b": {
        "connections": {
          "true": "31b2f947-d118-4593-9037-47631e4c6362",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 392,
        "y": 173.015625,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1236,
        "y": 145,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1236,
        "y": 253,
      },
      "startNode": {
        "x": 50,
        "y": 250,
      },
    },
    "uiConfig": {
      "categories": "[]",
    },
  },
  {
    "_id": "j05",
    "_rev": "1864564919",
    "enabled": true,
    "entryNodeId": "327eb877-019d-4ef6-9b17-a024fea0c71e",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "327eb877-019d-4ef6-9b17-a024fea0c71e": {
        "connections": {
          "level only": "cb490a79-245e-4876-a1a0-f507ac9c1553",
          "none": "cf10428f-0bb6-48c4-9926-96604c43da05",
          "shared and level": "95af6abc-623d-4580-bda5-152c19949c96",
          "shared only": "84d09172-2001-4e49-aad7-d8913fa27ff7",
        },
        "displayName": "mode",
        "nodeType": "ScriptedDecisionNode",
        "x": 167,
        "y": 210.015625,
      },
      "84d09172-2001-4e49-aad7-d8913fa27ff7": {
        "connections": {
          "true": "cf10428f-0bb6-48c4-9926-96604c43da05",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 393,
        "y": 259.015625,
      },
      "95af6abc-623d-4580-bda5-152c19949c96": {
        "connections": {
          "true": "a8f93777-948d-4efd-a76b-c44bc925d84e",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 392,
        "y": 173.015625,
      },
      "a8f93777-948d-4efd-a76b-c44bc925d84e": {
        "connections": {
          "true": "cf10428f-0bb6-48c4-9926-96604c43da05",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 598,
        "y": 173.015625,
      },
      "cb490a79-245e-4876-a1a0-f507ac9c1553": {
        "connections": {
          "true": "cf10428f-0bb6-48c4-9926-96604c43da05",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 395,
        "y": 345.015625,
      },
      "cf10428f-0bb6-48c4-9926-96604c43da05": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "nest",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 816,
        "y": 232.015625,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1236,
        "y": 145,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1236,
        "y": 253,
      },
      "startNode": {
        "x": 50,
        "y": 250,
      },
    },
    "uiConfig": {
      "categories": "[]",
    },
  },
  {
    "_id": "j06",
    "_rev": "-1392838639",
    "enabled": true,
    "entryNodeId": "a70d6f30-ffa8-4c77-851e-2d71fd601fa2",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "049f1e8b-2d7b-40e5-8bb9-4bf373e515c0": {
        "connections": {
          "true": "708467b1-f201-40f6-a0ba-33148defec5d",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 393,
        "y": 259.015625,
      },
      "53169a16-1d53-4188-8342-83200849303f": {
        "connections": {
          "true": "708467b1-f201-40f6-a0ba-33148defec5d",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 395,
        "y": 345.015625,
      },
      "708467b1-f201-40f6-a0ba-33148defec5d": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "nest",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 816,
        "y": 232.015625,
      },
      "a70d6f30-ffa8-4c77-851e-2d71fd601fa2": {
        "connections": {
          "level only": "53169a16-1d53-4188-8342-83200849303f",
          "none": "708467b1-f201-40f6-a0ba-33148defec5d",
          "shared and level": "c9f349aa-17da-4e3a-80d5-8d28c4fd86b1",
          "shared only": "049f1e8b-2d7b-40e5-8bb9-4bf373e515c0",
        },
        "displayName": "mode",
        "nodeType": "ScriptedDecisionNode",
        "x": 167,
        "y": 210.015625,
      },
      "c9f349aa-17da-4e3a-80d5-8d28c4fd86b1": {
        "connections": {
          "true": "ccabe192-8f7a-4cf2-8a9d-dec9076d910a",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 392,
        "y": 173.015625,
      },
      "ccabe192-8f7a-4cf2-8a9d-dec9076d910a": {
        "connections": {
          "true": "708467b1-f201-40f6-a0ba-33148defec5d",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 598,
        "y": 173.015625,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1236,
        "y": 145,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1236,
        "y": 253,
      },
      "startNode": {
        "x": 50,
        "y": 250,
      },
    },
    "uiConfig": {
      "categories": "[]",
    },
  },
  {
    "_id": "j07",
    "_rev": "1923718438",
    "enabled": true,
    "entryNodeId": "85bf5f29-709e-42bb-939e-6c7bc8e710ac",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "0242464d-58bb-46d3-bf41-ec0157ba8720": {
        "connections": {
          "true": "57182fc1-789a-49d0-ba08-3d3f39202daf",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 393,
        "y": 259.015625,
      },
      "57182fc1-789a-49d0-ba08-3d3f39202daf": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "nest",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 816,
        "y": 232.015625,
      },
      "85bf5f29-709e-42bb-939e-6c7bc8e710ac": {
        "connections": {
          "level only": "af0f2180-6077-42d5-bad6-a238d351e6db",
          "none": "57182fc1-789a-49d0-ba08-3d3f39202daf",
          "shared and level": "9b48d3b0-36fd-47ca-8ef0-26a6b00e9280",
          "shared only": "0242464d-58bb-46d3-bf41-ec0157ba8720",
        },
        "displayName": "mode",
        "nodeType": "ScriptedDecisionNode",
        "x": 167,
        "y": 210.015625,
      },
      "9b48d3b0-36fd-47ca-8ef0-26a6b00e9280": {
        "connections": {
          "true": "dad45c04-3d86-4e3a-b5c3-34e89719f705",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 392,
        "y": 173.015625,
      },
      "af0f2180-6077-42d5-bad6-a238d351e6db": {
        "connections": {
          "true": "57182fc1-789a-49d0-ba08-3d3f39202daf",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 395,
        "y": 345.015625,
      },
      "dad45c04-3d86-4e3a-b5c3-34e89719f705": {
        "connections": {
          "true": "57182fc1-789a-49d0-ba08-3d3f39202daf",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 598,
        "y": 173.015625,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1236,
        "y": 145,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1236,
        "y": 253,
      },
      "startNode": {
        "x": 50,
        "y": 250,
      },
    },
    "uiConfig": {
      "categories": "[]",
    },
  },
  {
    "_id": "j08",
    "_rev": "799015453",
    "enabled": true,
    "entryNodeId": "1ac726e7-e46d-4521-a65e-00c71951dd5b",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "1ac726e7-e46d-4521-a65e-00c71951dd5b": {
        "connections": {
          "level only": "875be2ae-0926-43ee-b742-ef75e4235015",
          "none": "c9e13651-7c3f-4cd8-8245-c9dd09672069",
          "shared and level": "f9802f38-14cd-4a2e-a7a1-2e6c4d0fb6e2",
          "shared only": "b524e828-573e-40c1-aef6-84abfec262c2",
        },
        "displayName": "mode",
        "nodeType": "ScriptedDecisionNode",
        "x": 167,
        "y": 210.015625,
      },
      "875be2ae-0926-43ee-b742-ef75e4235015": {
        "connections": {
          "true": "c9e13651-7c3f-4cd8-8245-c9dd09672069",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 395,
        "y": 345.015625,
      },
      "b524e828-573e-40c1-aef6-84abfec262c2": {
        "connections": {
          "true": "c9e13651-7c3f-4cd8-8245-c9dd09672069",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 393,
        "y": 259.015625,
      },
      "b5a9be22-512b-402c-960d-c4c8b1f32cfa": {
        "connections": {
          "true": "c9e13651-7c3f-4cd8-8245-c9dd09672069",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 598,
        "y": 173.015625,
      },
      "c9e13651-7c3f-4cd8-8245-c9dd09672069": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "nest",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 816,
        "y": 232.015625,
      },
      "f9802f38-14cd-4a2e-a7a1-2e6c4d0fb6e2": {
        "connections": {
          "true": "b5a9be22-512b-402c-960d-c4c8b1f32cfa",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 392,
        "y": 173.015625,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1236,
        "y": 145,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1236,
        "y": 253,
      },
      "startNode": {
        "x": 50,
        "y": 250,
      },
    },
    "uiConfig": {
      "categories": "[]",
    },
  },
  {
    "_id": "j09",
    "_rev": "1907157793",
    "enabled": true,
    "entryNodeId": "06794f50-9356-492c-bd46-2662d68dfc53",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "06794f50-9356-492c-bd46-2662d68dfc53": {
        "connections": {
          "level only": "e3303783-9734-42ec-88c5-a7a627427059",
          "none": "553fd963-ba44-409c-a9fb-36f8cc5ca6b8",
          "shared and level": "61ea0d1e-2ec3-47ba-8c9c-319a60a9cbde",
          "shared only": "4d9ceac3-0de2-48e6-9547-562de6a0b180",
        },
        "displayName": "mode",
        "nodeType": "ScriptedDecisionNode",
        "x": 167,
        "y": 210.015625,
      },
      "4d9ceac3-0de2-48e6-9547-562de6a0b180": {
        "connections": {
          "true": "553fd963-ba44-409c-a9fb-36f8cc5ca6b8",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 393,
        "y": 259.015625,
      },
      "553fd963-ba44-409c-a9fb-36f8cc5ca6b8": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "nest",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 816,
        "y": 233.015625,
      },
      "61ea0d1e-2ec3-47ba-8c9c-319a60a9cbde": {
        "connections": {
          "true": "aad50ee1-c4dd-4bb7-a403-bb6f60dbf058",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 392,
        "y": 173.015625,
      },
      "aad50ee1-c4dd-4bb7-a403-bb6f60dbf058": {
        "connections": {
          "true": "553fd963-ba44-409c-a9fb-36f8cc5ca6b8",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 598,
        "y": 173.015625,
      },
      "e3303783-9734-42ec-88c5-a7a627427059": {
        "connections": {
          "true": "553fd963-ba44-409c-a9fb-36f8cc5ca6b8",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 395,
        "y": 345.015625,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1236,
        "y": 145,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1236,
        "y": 253,
      },
      "startNode": {
        "x": 50,
        "y": 250,
      },
    },
    "uiConfig": {
      "categories": "[]",
    },
  },
  {
    "_id": "j10",
    "_rev": "-1144362452",
    "enabled": true,
    "entryNodeId": "ccc8e0e1-86fc-4515-bc02-a3e11b07b933",
    "identityResource": "managed/alpha_user",
    "innerTreeOnly": false,
    "nodes": {
      "09e1d1e6-b388-448c-b5a6-00db52f826e7": {
        "connections": {
          "true": "53eaf2b6-6a93-4cf7-b8b9-788155d12ff2",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 395,
        "y": 345.015625,
      },
      "36cb348f-3b91-443b-a2ba-2e23c6446f49": {
        "connections": {
          "true": "53eaf2b6-6a93-4cf7-b8b9-788155d12ff2",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 393,
        "y": 259.015625,
      },
      "53eaf2b6-6a93-4cf7-b8b9-788155d12ff2": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "nest",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 816,
        "y": 233.015625,
      },
      "64c4e3ef-5cf3-4c6d-a3c1-367430b65ead": {
        "connections": {
          "true": "53eaf2b6-6a93-4cf7-b8b9-788155d12ff2",
        },
        "displayName": "level",
        "nodeType": "ScriptedDecisionNode",
        "x": 598,
        "y": 173.015625,
      },
      "aa5aebcf-131b-44f9-b596-f0805e1f4305": {
        "connections": {
          "true": "64c4e3ef-5cf3-4c6d-a3c1-367430b65ead",
        },
        "displayName": "shared",
        "nodeType": "ScriptedDecisionNode",
        "x": 392,
        "y": 173.015625,
      },
      "ccc8e0e1-86fc-4515-bc02-a3e11b07b933": {
        "connections": {
          "level only": "09e1d1e6-b388-448c-b5a6-00db52f826e7",
          "none": "53eaf2b6-6a93-4cf7-b8b9-788155d12ff2",
          "shared and level": "aa5aebcf-131b-44f9-b596-f0805e1f4305",
          "shared only": "36cb348f-3b91-443b-a2ba-2e23c6446f49",
        },
        "displayName": "mode",
        "nodeType": "ScriptedDecisionNode",
        "x": 167,
        "y": 210.015625,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1236,
        "y": 145,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1236,
        "y": 253,
      },
      "startNode": {
        "x": 50,
        "y": 250,
      },
    },
    "uiConfig": {
      "categories": "[]",
    },
  },
]
`;
